Add common files
gitignore, readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+bin/*
+*/bin*
+.settings/*
+*/.settings
+.cache
+.classpath
+.project
+f
+*.csv
+
 #################
 ## Eclipse
 #################
